Fix dark mode for calendar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --siteFont: PT Sans;
+}
+
 .medium-zoom-overlay {
     background: var(--background) !important;
 }
